--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
             </video>
         </section>
     </div>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DG01Q9H4FT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DG01Q9H4FT');
+</script>
 </body>
 </html>
